Fixing Possible security threats

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "lodash": "^4.17.11",
     "massive": "^2.6.0",
     "passport": "^0.3.2",
     "passport-auth0": "^0.6.0",
